--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <script type="module" crossorigin src="/DIFLA/assets/index.ae1165cd.js"></script>
-    <link rel="stylesheet" href="/DIFLA/assets/index.4f17c619.css">
+    <script type="module" crossorigin src="/difla/assets/index.ae1165cd.js"></script>
+    <link rel="stylesheet" href="/difla/assets/index.4f17c619.css">
   </head>
   <body>
     <div id="root"></div>
